...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="136dp"
        android:layout_height="59dp"
        android:layout_marginTop="574dp"
        android:layout_marginBottom="109dp"
        android:background="@drawable/rounded_button_background"
        android:paddingLeft="15dp"
...
