...
            android:background="@drawable/rounded_button_background"
            android:padding="15dp"
            android:text="Account"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonPersonalisiertesLernen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button_background"
            android:padding="15dp"
...
